[project]
name = "hugging-face-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "datasets[audio]>=3.6.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kokoro>=0.9.2",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
